--- a/src/Stylesheets/filters.css
+++ b/src/Stylesheets/filters.css
@@ -49,7 +49,7 @@
   flex-direction: column;
   justify-content: flex-start;
   overflow: scroll;
-  height: 100vh;
+  height: calc(100vh - 24px);
   width: 256px;
   padding: 0 2px;
   border-right: solid 1px #114a74;
