--- a/src/Stylesheets/media-queries.css
+++ b/src/Stylesheets/media-queries.css
@@ -33,9 +33,13 @@
   .nav-filter-wrapper {
     overflow: visible;
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: start;
     left: 0;
     top: 130px;
-    height: 100%;
+    height: calc(100% - 24px);
     z-index: 10;
     width: 100vw;
     background-color: #aaaa9854;
@@ -45,6 +49,7 @@
     position: sticky;
     z-index: 10;
     top: 0;
+    height: 100%;
     border-radius: 0px 5px 5px 0px;
     box-shadow: -1px -1px 5px #00000038, 0px 3px 2px #00000038,
       6px -6px 8px 3px #f0f0c9b2;
